<resources>
    <string name="app_name">玉津咖啡</string>
    <string name="yj_slogan">啟程 為夢想舉杯</string>
    <string name="yj_slogan_wng">TAKE ME AWAY</string>
    <string name="yj_acc">帳號：</string>
    <string name="yj_pwd">密碼：</string>
    <string name="yj_m_nameTittle">會員姓名：</string>
    <string name="yj_m_pwdTittle">會員密碼：</string>
    <string name="yj_m_reNewPwdTittle">修改會員密碼：</string>
    <string name="yj_m_pwd2Tittle">會員密碼確認：</string>
    <string name="yj_m_pointTittle">會員點數：</string>
    <string name="yj_m_emailTittle">會員信箱(帳號)：</string>
    <string name="yj_m_phoneTittle">會員電話：</string>
    <string name="yj_m_presetStoreTittle">預設訂購店家：</string>
    <string name="yj_m_presetPaymentTittle">預設付款方式：</string>
</resources>